--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,10 +22,9 @@
     </ul>
 
     <h3>Types and parameters</h3>
-    <p>Since the request body needs to have a single object, I decided to create a single class called GenericType with
-        every posible parameter that the fields need.</p>
-    <p>Some of these fields are the enum fieldType, that will be used for all types.</p>
-    <p>I describe below the field types available and what parameters from GenericType they actually use.</p>
+    <p>Each variable type has its own parameters.</p>
+    <p>One of these parameters is the string fieldType, that will be used for all types.</p>
+    <p>I describe below the field types available and what parameters are expected for each one of them in the petitions, since this api has only one endpoint to create queries.</p>
 
     <h3>CHAR, SMALL_INT, INTEGER, BIG_INT, MONEY, BOOLEAN, UUID</h3>
     <ul>
