Removes the filter by IP from security

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,9 +22,8 @@
     </ul>
 
     <h3>Types and parameters</h3>
-    <p>Each variable type has its own parameters.</p>
-    <p>One of these parameters is the string fieldType, that will be used for all types.</p>
-    <p>I describe below the field types available and what parameters are expected for each one of them in the petitions, since this api has only one endpoint to create queries.</p>
+    <p>Each type has its own parameters, including the parameter string type, that will be used for all types.</p>
+    <p>I describe below the types available and what parameters are expected for each one of them in the petitions, since this api has only one endpoint to create queries (/api/v1/populator/).</p>
 
     <h3>CHAR, SMALL_INT, INTEGER, BIG_INT, MONEY, BOOLEAN, UUID</h3>
     <ul>
